# cesauth

./: .gitignore  BUNDLE_SIZE_BUDGET.md  CHANGELOG.md  Cargo.toml  DEPENDENCIES.md  Makefile  NOTICE  README.md  ROADMAP.md  TERMS_OF_USE.md  deny.toml  dev-summary-v0.52.1-to-v0.54.0.md  rustfmt.toml  wrangler.toml
crates/adapter-cloudflare/: Cargo.toml  README.md
crates/adapter-cloudflare/src/: active_session.rs  admin.rs  anonymous.rs  auth_challenge.rs  authz.rs  billing.rs  lib.rs  mailer.rs  ports.rs  rate_limit.rs  refresh_token_family.rs  tenancy.rs
crates/adapter-cloudflare/src/admin/: audit_query.rs  bucket_safety.rs  cost_snapshots.rs  metrics.rs  principal_resolver.rs  thresholds.rs  tokens.rs
crates/adapter-cloudflare/src/authz/: assignments.rs  permissions.rs  roles.rs
crates/adapter-cloudflare/src/billing/: history.rs  plans.rs  subscriptions.rs
crates/adapter-cloudflare/src/mailer/: dev_console.rs  https_provider.rs  service_binding.rs  unconfigured.rs
crates/adapter-cloudflare/src/ports/: audit.rs  audit_chain.rs  cache.rs  repo.rs  session_index.rs  store.rs
crates/adapter-cloudflare/src/tenancy/: groups.rs  memberships.rs  organizations.rs  tenants.rs
crates/adapter-test/: Cargo.toml  README.md
crates/adapter-test/src/: admin.rs  anonymous.rs  audit.rs  audit_chain.rs  authz.rs  billing.rs  cache.rs  lib.rs  repo.rs  store.rs  tenancy.rs
crates/adapter-test/src/admin/: audit_query.rs  bucket_safety.rs  cost_snapshots.rs  metrics.rs  principal_resolver.rs  tests.rs  thresholds.rs  tokens.rs
crates/adapter-test/src/audit/: tests.rs
crates/adapter-test/src/audit_chain/: tests.rs
crates/adapter-test/src/authz/: assignments.rs  permissions.rs  roles.rs
crates/adapter-test/src/billing/: history.rs  plans.rs  subscriptions.rs
crates/adapter-test/src/repo/: authenticators.rs  clients.rs  deletions.rs  grants.rs  invitations.rs  signing_keys.rs  tests.rs  totp_authenticators.rs  totp_recovery_codes.rs  users.rs
crates/adapter-test/src/store/: active_session.rs  auth_challenge.rs  rate_limit.rs  refresh_token_family.rs  tests.rs
crates/adapter-test/src/tenancy/: groups.rs  memberships.rs  organizations.rs  tenants.rs  tests.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: admin.rs  anonymous.rs  audit.rs  authz.rs  billing.rs  deletion.rs  error.rs  i18n.rs  invitation.rs  jwt.rs  lib.rs  magic_link.rs  migrate.rs  oidc.rs  ports.rs  routes.rs  security_headers.rs  service.rs  session.rs  session_index.rs  tenancy.rs  tenant_admin.rs  timing.rs  totp.rs  turnstile.rs  types.rs  util.rs  webauthn.rs
crates/core/src/admin/: policy.rs  ports.rs  preview.rs  scope.rs  service.rs  tests.rs  types.rs
crates/core/src/audit/: chain.rs  retention.rs  verifier.rs
crates/core/src/authz/: ports.rs  service.rs  tests.rs  types.rs
crates/core/src/billing/: ports.rs  quota.rs  tests.rs  types.rs
crates/core/src/i18n/: mod.rs  tests.rs
crates/core/src/jwt/: claims.rs  proptests.rs  signer.rs
crates/core/src/magic_link/: mailer.rs  tests.rs
crates/core/src/migrate/: error.rs  export.rs  import.rs  invariants.rs  redaction.rs  tests.rs  types.rs  verify.rs
crates/core/src/oidc/: audience.rs  authorization.rs  discovery.rs  id_token.rs  introspect.rs  pkce.rs  token.rs  userinfo.rs
crates/core/src/ports/: audit.rs  audit_chain.rs  cache.rs  repo.rs  session_index.rs  store.rs
crates/core/src/service/: client_auth.rs  introspect.rs  revoke.rs  sessions.rs  token.rs
crates/core/src/session/: tests.rs
crates/core/src/session_index/: repair.rs  tests.rs
crates/core/src/tenancy/: ports.rs  service.rs  tests.rs  types.rs
crates/core/src/tenant_admin/: tests.rs
crates/core/src/totp/: qr.rs  storage.rs  tests.rs
crates/core/src/turnstile/: tests.rs
crates/core/src/types/: ids.rs  secret.rs  tests.rs
crates/core/src/webauthn/: authentication.rs  cose.rs  error.rs  registration.rs
crates/frontend/: Cargo.toml  index.html
crates/frontend/src/: admin.rs  app.rs  design_tokens.rs  lib.rs  render_context.rs  tenant_admin.rs  tests.rs
crates/frontend/src/admin/: audit.rs  audit_chain.rs  config.rs  config_edit.rs  cost.rs  frame.rs  overview.rs  preview.rs  tokens.rs
crates/frontend/src/pages/: login.rs  mod.rs  security_center.rs  sessions.rs  totp.rs
crates/frontend/src/templates/: chrome.rs  login.rs  mod.rs  security_center.rs  tests.rs  totp.rs
crates/frontend/src/tenancy_console/: forms.rs  tenant_detail.rs  tenants.rs  tests.rs
crates/frontend/src/tenant_admin/: affordances.rs  invitations.rs  oidc_clients.rs  organizations.rs  overview.rs  role_assignments.rs  tests.rs
crates/frontend/static/: webauthn.js
crates/frontend/tests/: acceptance_harness.rs
crates/migrate/: Cargo.toml  README.md
crates/migrate-test/: Cargo.toml
crates/migrate-test/src/: lib.rs
crates/migrate-test/tests/: migration_chain.rs
crates/migrate-test/tests/migration_chain/: common.rs  foundation.rs  repair_and_fks.rs  rfc_023_cross_tenant.rs  rfc_024_indexes.rs  rfc_050_sql.rs  rfc_051_authenticators.rs
crates/migrate/src/: d1_sink.rs  d1_source.rs  main.rs  schema.rs
crates/migrate/tests/: end_to_end.rs
crates/ui/: Cargo.toml  README.md
crates/ui/src/: admin.rs  design_tokens.rs  lib.rs  render_context.rs  saas.rs  templates.rs  tenancy_console.rs  tenant_admin.rs  tests.rs
crates/ui/src/admin/: alerts.rs  audit.rs  audit_chain.rs  config.rs  config_edit.rs  cost.rs  frame.rs  operations.rs  overview.rs  safety.rs  tests.rs  tokens.rs
crates/ui/src/saas/: forms.rs  frame.rs  organizations.rs  overview.rs  role_assignments.rs  subscription.rs  tenant_detail.rs  tenants.rs  tests.rs
crates/ui/src/templates/: chrome.rs  login.rs  mod.rs  security_center.rs  tests.rs  totp.rs
crates/ui/tests/: acceptance_harness.rs
crates/worker/: Cargo.toml
crates/worker/src/: adapter.rs  audit.rs  config.rs  cron_status.rs  csrf.rs  error.rs  flash.rs  i18n.rs  lib.rs  log.rs  post_auth.rs  routes.rs  session_index_audit.rs  sweep.rs
crates/worker/src/log/: tests.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: jwt_parse.rs
(+715 files in other folders)
