[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/adapter-cloudflare",
    "crates/adapter-test",
    "crates/migrate",
    "crates/ui",
    "crates/worker",
]
# Cloudflare-facing crates (adapter-cloudflare, worker) require
# wasm32-unknown-unknown and the `worker-build` toolchain. When working
# on the host-only portion of the codebase you can target the portable
# crates explicitly:
#     cargo test -p cesauth-core -p cesauth-adapter-test -p cesauth-ui
# A full `cargo check --workspace` needs Rust 1.85+ (declared in
# `[workspace.package].rust-version`) and the wasm32 target installed.

[workspace.package]
version      = "0.41.0"
edition      = "2024"
rust-version = "1.85"
license      = "Apache-2.0"
repository   = "https://github.com/nabbisen/cesauth"
authors      = ["nabbisen"]

[workspace.dependencies]
# --- Cloudflare Workers ---
# Bind once at workspace level so every crate sees the same version.
# worker 0.8.x requires edition = "2024" through its transitive graph.
worker  = { version = "0.8", features = ["d1", "http"] }

# --- Serde / JSON ---
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# --- Errors ---
thiserror = "2"
anyhow    = "1"

# --- Crypto / Auth ---
# jsonwebtoken 10.x supports EdDSA (Ed25519). `use_pem` lets us load
# the signing key from a PKCS#8 PEM via `EncodingKey::from_ed_pem`.
#
# **v0.41.0** — enabled `rust_crypto`. Historical context: pre-v0.41.0
# the workspace deliberately enabled only the bare `ed25519-dalek`
# opt-dep + `rand` + `use_pem`, deliberately omitting `rust_crypto`
# to avoid pulling in the transitive `rsa` dep affected by
# RUSTSEC-2023-0071 / "Marvin Attack". This was a sound threat-model
# call (cesauth signs and verifies exclusively with EdDSA, never
# RSA) but it produced a latent runtime bug: jsonwebtoken 10 wired
# the EdDSA verify path through `CryptoProvider::install_default`,
# which the bare `ed25519-dalek` opt-dep does not satisfy. The
# first introspection request with a real access token in
# production would panic at `decode<C>(...)` with the message
# "Could not automatically determine the process-level
# CryptoProvider...". The bug existed since v0.38.0
# (introspection's introduction) but no CI test exercised the
# real-JWT verify path until v0.41.0's multi-key work tried to.
#
# Enabling `rust_crypto` brings transitive `rsa` v0.9 back in. We
# accept this because:
#  - cesauth has no code path that calls `Algorithm::RS{256,384,512}`
#    or `Algorithm::PS{256,384,512}`. The `rsa` dep is dead code from
#    cesauth's perspective.
#  - Marvin Attack is a side-channel against RSA decryption /
#    signing, not against unused-but-linked code. A linked-but-
#    unreachable `rsa::PrivateKey` does not exercise the
#    vulnerable path.
#  - The alternative (a panicking production binary on the first
#    real introspection request) is strictly worse.
#
# A future sweep should swap the dep to `josekit` + `ed25519-dalek`
# direct, dropping `rsa` entirely. Tracked in the v0.4 "WASM
# caveat" comment in `signer.rs` which already anticipates this
# move.
jsonwebtoken = { version = "10", default-features = false, features = ["use_pem", "rust_crypto"] }

# webauthn-rs: deliberately NOT included in the initial build. The
# `webauthn::registration::finish` and `webauthn::authentication::finish`
# functions in `core` are stubs that return an error; the real
# attestation / assertion verification is a follow-up that will re-add
# `webauthn-rs-core` and `webauthn-rs-proto`. Keeping them out now
# avoids a heavy transitive chain (icu4x, url, x509-parser) whose
# recent releases push MSRV past what we want to pin.

# --- Encoding / hashing ---
base64     = "0.22"
sha2       = "0.10"
hex        = "0.4"

# --- TOTP (RFC 6238), v0.26.0 + ---
# RustCrypto pattern matching `sha2` 0.10 above. SHA-1 is the only
# hash supported (ADR-009 §Q1; locked because Google Authenticator
# silently falls back to SHA-1 on SHA-256 secrets, producing wrong
# codes — universal authenticator-app compatibility wins).
sha1       = "0.10"
hmac       = "0.12"
# AES-GCM-256 for TOTP secret encryption at rest (ADR-009 §Q5).
# AAD-bound to row primary key prevents D1-backup-swap attacks.
aes-gcm    = "0.10"
# base32 for the `otpauth://` URI's `secret=` parameter
# (ADR-009 §Q8) and recovery codes (ADR-009 §Q6).
data-encoding = "2"
# QR code generation for the TOTP enrollment page (v0.28.0+).
# Pure-Rust, no external image dep — emits SVG which we inline
# into the HTML template. `default-features = false` drops the
# image-rendering features we don't use; `svg` feature is what
# lets us emit string SVG.
qrcode     = { version = "0.14", default-features = false, features = ["svg"] }

# Pin `getrandom` to the 0.2 line. 0.3 is also in the graph via ring, but we
# only ask for 0.2 ourselves - the `js` feature is only relevant here.
getrandom  = { version = "0.2", features = ["js"] }
rand_core  = { version = "0.6", features = ["getrandom"] }
uuid       = { version = "1", features = ["v4", "serde", "js"] }

# --- Time ---
# `time` with `wasm-bindgen` gives us UTC inside Workers without std-time ops.
time = { version = "0.3", features = ["serde", "wasm-bindgen"] }

# --- CLI tooling (migrate, v0.19.0+) ---
# Used only by host-side binaries (`crates/migrate`). Workers crates
# do not pull these in.
clap  = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "process"] }

# --- Internal crates ---
cesauth-core                = { path = "crates/core" }
cesauth-adapter-cloudflare  = { path = "crates/adapter-cloudflare" }
cesauth-adapter-test        = { path = "crates/adapter-test" }
cesauth-ui                  = { path = "crates/ui" }

[profile.release]
# Workers is size-sensitive. opt-level = "z" + lto + 1 codegen-unit shrinks the WASM.
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
