[package]
name    = "cesauth-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

# Required by cargo-fuzz.
[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
cesauth-core  = { path = "../crates/core" }

# Fuzz targets are compiled as separate binaries; not library targets.
[[bin]]
name = "jwt_parse"
path = "fuzz_targets/jwt_parse.rs"
test = false
doc  = false
