[package]
name        = "cesauth-adapter-cloudflare"
description = "Cloudflare adapter (Durable Objects, D1, KV, R2) for cesauth."
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true

[lib]
# Short, unambiguous import name: `use cesauth_cf::...`.
name = "cesauth_cf"
path = "src/lib.rs"

[dependencies]
cesauth-core                = { workspace = true }

worker                      = { workspace = true }
# Required explicitly since workers-rs 0.8 no longer re-exports these.
wasm-bindgen                = { workspace = true }
js-sys                      = { workspace = true }
serde                       = { workspace = true }
serde_json                  = { workspace = true }
sha2                        = { workspace = true }
thiserror                   = { workspace = true }
time                        = { workspace = true }
uuid                        = { workspace = true }
