[package]
name        = "cesauth-adapter-test"
description = "In-memory port implementations for host-side tests of cesauth domain logic."
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true

[lib]
name = "cesauth_adapter_test"
path = "src/lib.rs"

[dependencies]
cesauth-core                = { workspace = true }

serde                       = { workspace = true }
serde_json                  = { workspace = true }
uuid                        = { workspace = true }

[dev-dependencies]
tokio                       = { version = "1", features = ["macros", "rt"] }
