[package]
name        = "cesauth-core"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
description = "Pure-Rust domain layer for cesauth: OIDC, WebAuthn, JWT, Magic Link."

[lib]
# Explicitly a library. No proc-macro or cdylib here - that's the worker crate's job.
path = "src/lib.rs"

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
base64       = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
getrandom    = { workspace = true }
rand_core    = { workspace = true }
uuid         = { workspace = true }
time         = { workspace = true }

# HMAC for session cookie signing. Separate from the JWT signing key
# (Ed25519) because cookies are a server-internal integrity concern;
# JWTs are public-key consumer concerns. Mixing them would force either
# a public-key verify on every cookie (expensive) or publishing the
# HMAC secret via JWKS (nonsensical).
#
# Also used by `cesauth_core::totp` (v0.26.0+) for HMAC-SHA1 TOTP
# generation per RFC 6238.
hmac         = { workspace = true }

# --- TOTP (RFC 6238, v0.26.0+) ---
# See ADR-009 for design rationale. The TOTP library is pure functions
# with no I/O — encryption helpers, code generation, code verification.
# Stored secrets are encrypted with AES-GCM-256, the only AEAD we
# expose at the library API.
sha1            = { workspace = true }
aes-gcm         = { workspace = true }
data-encoding   = { workspace = true }
# QR code SVG generator — used by `cesauth_core::totp::qr` to
# emit the inline-SVG block consumed by the enrollment page
# template. Pure-Rust, no image deps; the `svg` feature is the
# string-emit path we want.
qrcode          = { workspace = true }

# --- WebAuthn verification ---
# `webauthn-rs-core` has a hard dependency on `openssl` which does not
# build for wasm32-unknown-unknown. Instead we implement the subset of
# the WebAuthn ceremony we need (packed / none attestation with Ed25519
# / ES256 keys - the common passkey cases) on top of these pure-Rust
# crates, which all build for wasm32 cleanly.
ciborium        = { version = "0.2", default-features = false }
ed25519-dalek   = { version = "2",   default-features = false, features = ["std", "pkcs8"] }
# v0.44.0 — `pkcs8` direct dep with `pem` feature. ed25519-dalek's
# `pkcs8` feature pulls the type re-exports but not the PEM-decode
# method (`DecodePrivateKey::from_pkcs8_pem` is gated on the
# upstream `pkcs8` crate's `pem` feature). We need PEM to load
# operator-supplied JWT_SIGNING_KEY_PEM env content.
pkcs8           = { version = "0.10", default-features = false, features = ["pem", "std"] }
p256            = { version = "0.13", default-features = false, features = ["ecdsa", "std"] }

[dev-dependencies]
# Same dev-dep shape as adapter-test. Async test fns are nicer for
# port-shaped code than hand-rolling `futures::executor::block_on`.
tokio    = { version = "1", features = ["macros", "rt"] }
# RFC 003 (v0.51.1): property-based testing for JWT round-trips and
# redirect_uri matcher invariants.
proptest = { workspace = true }
