[package]
name        = "cesauth-frontend"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
description = "Typed, accessible UI components and HTML templates for cesauth login flows."

[lib]
# cdylib  — Trunk builds this to WASM for the browser (--features csr).
# rlib    — cargo/wrangler links this into cesauth-backend (no csr feature).
# Both must be present so trunk and cargo can each use the right artifact.
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = []
csr = [
    "dep:leptos",
    "dep:leptos_router",
    "dep:gloo-net",
    "dep:console_error_panic_hook",
    "dep:web-sys",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "leptos/csr",
]

[dependencies]
cesauth-core = { path = "../core" }
time         = { workspace = true }
serde        = { workspace = true }

# Leptos — optional; only compiled when `csr` feature is active.
# Pin to 0.8.2: see RFC 115 §2 for the getrandom/uuid constraint.
leptos        = { version = "=0.8.2", optional = true }
leptos_router = { version = "=0.8.2", optional = true }

# Browser HTTP client for Leptos components.
gloo-net = { version = "0.6", optional = true }

# Browser DOM/Navigator/fetch APIs.
web-sys = { version = "0.3", features = [
    "Window", "Navigator", "Location",
    "Request", "RequestInit", "RequestMode",
    "Response", "Headers",
], optional = true }

# Async bridge for Promises → Rust futures.
wasm-bindgen-futures = { version = "0.4", optional = true }

# Raw JS reflection for WebAuthn credential serialisation.
js-sys = { workspace = true, optional = true }

console_error_panic_hook = { version = "0.1", optional = true }
