[package]
name        = "cesauth-migrate"
description = "Server-to-server data migration tool for cesauth (ADR-005)."
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true

[[bin]]
name = "cesauth-migrate"
path = "src/main.rs"

[dependencies]
cesauth-core                = { workspace = true }

clap                        = { workspace = true }
serde                       = { workspace = true }
serde_json                  = { workspace = true }
tokio                       = { workspace = true }
anyhow                      = { workspace = true }
