[package]
name        = "cesauth-ui"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
description = "Minimal, accessible HTML templates for cesauth login flows."

[lib]
path = "src/lib.rs"

[dependencies]
# No templating engine on purpose: the pages are small enough that a
# `format!` is clearer and ships zero extra dependencies.
