[package]
name        = "cesauth-ui"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
description = "Minimal, accessible HTML templates for cesauth login flows."

[lib]
path = "src/lib.rs"

[dependencies]
# No templating engine on purpose: the pages are small enough that a
# `format!` is clearer and ships zero extra dependencies.
#
# The admin-console templates (v0.3.0 and later) read domain types
# straight out of `cesauth-core::admin::types`. Going through `core`
# rather than redeclaring the shapes here keeps the UI and the handlers
# honestly in sync. `core` itself has no Cloudflare deps (see its
# module-level comment), so this does NOT pull worker/wasm code into
# the UI build.
cesauth-core = { path = "../core" }
# v0.33.0: ISO-8601 timestamp formatting in the audit chain
# status page (`audit_chain.rs`). The dep was already transitively
# present through cesauth-core but adding our own direct line keeps
# the import explicit.
time         = { workspace = true }
