[package]
name        = "cesauth-worker"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "Cloudflare Workers entrypoint for cesauth."

[lib]
# `cdylib` is the format wasm-bindgen / worker-build expects so the
# Workers runtime can find the exported functions. `rlib` is kept so
# we can still run `cargo test -p cesauth-worker` on the host for the
# pure-Rust pieces (error mapping, route parsing).
crate-type = ["cdylib", "rlib"]
path       = "src/lib.rs"

[dependencies]
worker       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
base64       = { workspace = true }
uuid         = { workspace = true }
time         = { workspace = true }
getrandom    = { workspace = true }
# SHA-256 for hashing admin-token plaintext before storage (v0.4.0).
sha2         = { workspace = true }
# HMAC-SHA256 for the v0.31.0 flash cookie's signature. The flash
# module derives a sub-key from SESSION_COOKIE_KEY via HKDF-style
# expansion and uses HMAC for tamper detection. See flash.rs.
hmac         = { workspace = true }
# Used explicitly for `form_urlencoded` parsing in the token endpoint.
# Present transitively via worker/idna as well, but declaring our own
# direct dep prevents silent breakage if the transitive path changes.
url          = "2"

cesauth-core                = { workspace = true }
cesauth-adapter-cloudflare  = { workspace = true }
cesauth-ui                  = { workspace = true }
